# receipt-api

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_03_2122-7e2170ac3098_initial.py
app/: config.py  dependencies.py  main.py  models.py
app/api/: router.py
app/api/v1/auth/: dependencies.py  router.py  schemes.py  services.py  utils.py
app/api/v1/payment/: constants.py  dependencies.py  filters.py  models.py  repositories.py  schemes.py  service.py
app/api/v1/receipt/: dependencies.py  filters.py  models.py  repositories.py  router.py  schemes.py  services.py  utils.py
app/api/v1/user/: dependencies.py  models.py  repositories.py  service.py
app/core/: crud_service.py  db.py  repository.py
tests/: conftest.py
tests/api/v1/auth/: test_auth.py
tests/api/v1/receipt/: test_receipt.py  utils.py
tests/utils/: random_name.py  tokens.py
