[tool.poetry]
name = "receipt-api"
version = "0.1.0"
description = ""
authors = ["Artur Boyun <arturboyun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
